[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "FATtools"
authors = [
    {name = "maxpat78", email = "maxpat78@yahoo.it"},
]
description = "Pure python tools for accessing FAT filesystem images and disks"
readme = "README.MD"
requires-python = ">=3.5"
keywords = ["FAT", "disk","image"]
license = {text = "GPL"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Environment :: Win32 (MS Windows)',
    'Environment :: MacOS X',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: System :: Filesystems'
]
dependencies = ["hexdump"]
dynamic=["version"]

[project.urls]
homepage = "https://github.com/maxpat78/FATtools"
repository = "https://github.com/maxpat78/FATtools.git"

[tool.setuptools]
packages = ["FATtools", "FATtools.NTFS", "FATtools.scripts"]

[tool.setuptools.dynamic]
version = {attr = "FATtools.version.__version__"}

[project.scripts]
fattools = "FATtools.scripts.main:main"
